--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -47,7 +47,8 @@
 
       <!-- barra de busqueda -->
       <section>
-        <div class="search">
+
+        <!-- <div class="search">
            <form action="search" method="GET">
                <i class="fas fa-search"></i>
                <input type="text" name="search" placeholder="Buscar producto" class="searchhome">
@@ -55,9 +56,20 @@
                <a href="/">Buscar</a>
               </button>
             </form>
+        </div> -->
+
+        <div class="box">
+          <div class="container-3">
+            
+           <!-- <form action="search" method="GET"> -->
+              <span class="icon"><a href="/"> Ir <i class="fa fa-search"></i></a></span>
+              <input type="search" id="search" placeholder="Busca tu proximo destino..." />
+              
+          </div>
         </div>
+
       </section> 
-      </div>
+    </div>
 
 <!--  DESDE ACA PRODUCTOS DESCATADOS        -->
       <section class="first">
@@ -65,6 +77,7 @@
           <div class="pd"><h1> PAQUETES DESTACADOS </h1></div>
           <br>
           <div class="destacado">
+            
 
             <div class ="listaProducto">
             <%products.forEach(product => { %>
@@ -92,6 +105,7 @@
       <hr>
       <br>
     </div>
+    
          
           <div class=""><h1 class="pd"> NUESTRAS AVENTURAS </h1></div>
           <br>
@@ -119,9 +133,11 @@
               </div>
         </div>
       </div>
+   
      <!--  </section> -->
     </section>
 
+  
 
 
       <br>
