--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -72,6 +72,8 @@
     </div>
 
 <!--  DESDE ACA PRODUCTOS DESCATADOS        -->
+
+
       <section class="first">
         <div class="containerproducts" >  
           <div class="pd"><h1> PAQUETES DESTACADOS </h1></div>
@@ -133,7 +135,7 @@
               </div>
         </div>
       </div>
-   
+    </div>
      <!--  </section> -->
     </section>
 
@@ -187,6 +189,7 @@
               </div>
           </div>
         </section>
+        
     </main>
 
     
