--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -36,9 +36,12 @@
           <%- include('partials/cotizacion.ejs') %>
         <hr>
      </section>
+     <section>
      <div class="texto-barra">
-         <h3> Turisteando es la pagina que estabas buscando para empezar tus vacaciones por Argentina </h3>
+     <!--  <div><img class="content-images" src="images/destinos/principal.jpg"></div> -->
+        <h3 style="font-size: 50px;"> Choose your next trip with us.</h3>
      </div>
+    </section>
      
     
 
