--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -24,8 +24,8 @@
                         </div>
                         <br>
                         <div class="product-info">
-                            <p class ="precio">Precio: ARS $ <%= product.price %> </p>
-                            
+                            <p class ="precio">Precio: ARS $ <%= product.price %> </p><br>
+             <!--                
                             <div class="control">
                                 <select name="cantidad" id="cantidad">
                                     <option disabled selected>Cuantos pasajeros</option>
@@ -35,13 +35,13 @@
                                     <option value=4>4</option>
                                     <option value=5>5</option>
                                 </select>
-                            </div>
+                            </div> -->
                             
-                            <hr>
-                            <p  class ="descripcion">Descripción:  <%= product.description %> </p>
+                           
+                            <p class ="descripcion">Descripción:  <%= product.description %> </p>
                         </div>
                     </div>
-                        <hr>
+                    <br>
             
                     <div class="include">
                         <p>Nuestro paquete incluye</p>
@@ -53,11 +53,8 @@
              
                     <br>
 
-                    
-                        <a href="#" class="agregar-carrito" style="font-size: 35px; text-align: center;">AGREGAR AL CARRITO</a>
+                        <a href="#" class="agregar-carrito" style="font-size: 25px; text-align: center; color:gray">AGREGAR AL CARRITO</a>
                    
-
-                    
                     <br>
                 </div>
                 <div class="button">
