--- a/src/views/users/userList.ejs
+++ b/src/views/users/userList.ejs
@@ -11,7 +11,7 @@
         <main>
             <div class="container">
                 <h1 class="nombre">Lista Usuarios</h1>
-                <script type="text/javascript">
+<!--                 <script type="text/javascript">
     function sort(ascending, columnClassName, tableId) {
         var tbody = document.getElementById(tableId).getElementsByTagName(
                 "tbody")[0];
@@ -88,7 +88,7 @@
         </tbody>
     </table>
 </body>
-</html>
+</html> -->
 
                     <% users.forEach(user => { %>
                         <article class="card" >
