--- a/public/css/index.css
+++ b/public/css/index.css
@@ -62,12 +62,13 @@ h2{
 
     /*solo texto de barra busqueda*/
 .texto-barra{
-    background-color:lightblue;
+   /*  background-color:lightblue; 
   /*   display: flex; */
     text-align: center;
     width: 100%;
-    height: 50px;
-    padding: 10px 20px;
+    height: 120px;
+    padding: 30px 30px;
+    color: lightblue
     
 
 }
