--- a/src/views/products/carrito.ejs
+++ b/src/views/products/carrito.ejs
@@ -3,7 +3,7 @@
    
 <head>
     <%- include('../partials/head.ejs') %>
- <!--    <link rel="stylesheet" href="/css/carrito.css"> -->
+ <link rel="stylesheet" href="/css/carrito.css"> 
     
 </head>
 <body>
@@ -30,7 +30,7 @@
              <hr>
 
         <div class= "resumen">
-            <h2 style="font-size: 40px;"> Resumen de tus reservas</h2>
+            <h2 style="font-size: 40px;" class="carrotitle"> Resumen de tus reservas</h2>
  
                <div id="carrito">    
                     <table id="lista-carrito">
