--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,7 +32,7 @@
       </div>
   <!--API-->
     <section> 
-     <!--  <div><img class="content-images"src="images/destinos/principal.jpg"></div>  -->
+<!--  <div><img class="content-imagefirst"src="images/destinos/mund.jpg"></div>  -->
         <br>
           <%- include('partials/cotizacion.ejs') %>
         <hr>
@@ -150,8 +150,9 @@
       <hr>
 
       <section class="partners"> 
+  
         <div class="partners">
-    <!--       <h1 class="main-title" >Trabajan con nosotros:</h1> -->
+     <h1 class="main-title" >They work with us:</h1>
           <div class="box-partner">
               <h3 class="title">LATAM</h3>
                 <div class="content">
