--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -40,7 +40,7 @@
      <section>
      <div class="texto-barra">
 
-        <h3 style="font-size: 50px;"> Choose your next trip with us.</h3>
+        <h3 style="font-size: 50px;"> Busca tu proxima aventura</h3>
      </div>
     </section>
      
@@ -152,7 +152,7 @@
       <section class="partners"> 
   
         <div class="partners">
-     <h1 class="main-title" >They work with us:</h1>
+     <h1 class="main-title" >Colaboradores:</h1>
           <div class="box-partner">
               <h3 class="title">LATAM</h3>
                 <div class="content">
