--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,14 +16,6 @@ body {
 }
 
 
-
-
-/* .contenedor{
-
-}
-.producto{
-
-} */
 a {
     color: black;
     text-decoration: none;
@@ -32,13 +24,7 @@ a {
 h2{
     text-align: center;
 }
-/* .contendor {
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    
-   
-} */
+
 
 .header {
     font-size: 20px;
@@ -68,7 +54,8 @@ h2{
     width: 100%;
     height: 120px;
     padding: 30px 30px;
-    color: lightblue
+    color: lightblue;
+    
     
 
 }
