--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,8 @@ header .container {
 
     display: flex;
     justify-content: space-between;
+    z-index: 1;
+    margin-bottom: -20px;
 }
 
 header a, footer a { 
@@ -37,7 +39,9 @@ header .header-right { display: flex; }
   margin: auto;
   background-attachment: scroll;
   margin-bottom: 5px;
-/*   margin-top: -1px; */
+  margin-top: -25px; 
+  z-index: 99;
+  border-radius: 20px;
   
 }
 
@@ -80,12 +84,13 @@ header .header-right { display: flex; }
 /* Caption text */
 .text {
   color: #f2f2f2;
-  font-size: 15px;
+  font-size: 40px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
   width: 100%;
   text-align: center;
+  
 }
 
 /* Number text (1/3 etc) */
@@ -132,3 +137,10 @@ header .header-right { display: flex; }
 }
     
 
+.carrusel-header{
+
+ opacity: 80%;
+
+ z-index: 99;
+ 
+}
