--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -45,7 +45,7 @@
   </div>
 
      
- 
+ <div class ="carrusel-header"> 
       <!-- Slideshow container -->
   <div class="slideshow-container" >
 
@@ -89,8 +89,8 @@
   </div>
 
   <!-- para que funcionen las acciones de next y previos del carrusel-->
-  <script src="/js/carousel.js"></script>
   
-    
+  
+</div> 
 </header>
-
+<script src="/js/carousel.js"></script>
