--- a/src/views/closeSession.ejs
+++ b/src/views/closeSession.ejs
@@ -7,7 +7,7 @@
     <body>
         <%- include('partials/header.ejs') %>
 
-        <h1 style = "color: black;">Ya estas logeado - Cerra sesión para continuar <i class="fas fa-door-closed"></i></h1>
+        <h1 style = "color: black; text-align: center">Ya estas logeado - Cerra sesión para continuar <i class="fas fa-door-closed"></i></h1>
 
        
         <footer>
