--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -8,7 +8,9 @@
             <%- include('partials/header.ejs') %>
         </header>
         <main>
-            <h1>Gracias por contactarte</h1>
+            <div class="texto-titles">
+                <h3> Gracias por contactarte con nosotros! </h3>
+              </div>
 
             <div>
                 <h2>Contacto</h2>
