--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -16,7 +16,9 @@
                     <div class="columns is-centered">
                         <div class="column is-6">
                           <hr>
-                            <h1 style="color: black;">Registrate acá!</h1>
+                          <div class="texto-titles">
+                            <h3 style="font-size: 40px;"> Registrate acá! </h3>
+                        </div>
 
                                 <form class="reservation" id="register-form" action="/users" method="POST" enctype="multipart/form-data">
                                     <div class="field">
