--- a/public/css/footer2.css
+++ b/public/css/footer2.css
@@ -112,7 +112,7 @@
     h2 {
     font-weight: 400;
     font-size: 15px;
-   
+    text-align: center;
 
     }
     .text{
@@ -165,6 +165,7 @@
     text-align: center;
     color: #999;
     }   
+    
     
     @media screen and (min-width: 600px) {
     .r-footer > * {
