--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -121,6 +121,7 @@
                           </a>
                         </div>
                     </div>
+                    
                   <% } %>
                 <% }) %>
               </div>
@@ -132,7 +133,9 @@
 
       <section class="partners"> 
         <div class="partners">
-          <h2 class="main-title" >Colaboradores:</h2>
+          <div class="texto-titles" style="font-size: 25px;">
+            <h3> Colaboran con nosotros </h3>
+          </div>
             <div class="box-partner">
               <h3 class="title">LATAM</h3>
                 <div class="content">
