--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -11,8 +11,11 @@
         </header>
         <div class="container">
             <section>
+                <div class="texto-titles">
+                    <h3 style="font-size: 40px;"> Ingresá con tu mail y contraseña </h3>
+                </div>
                 <div class="login">
-                    <h1 id="header">Ingresá con tu email y contraseña</h1>
+                    
                         <!-- LOGIN FORM -->
                         <form class="form-login" id="login-form" action="/login" method="POST">
         
